[project]
name = "Comfyui-EasySettingPipes"
description = "Just a Sampler and another settings pipe for comfyui"
version = "0.1.3"
license = {text = "MIT License"} 

[project.urls]
Repository = "https://github.com/hayde0096/Comfyui-EasySettingpipes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayde0096"
DisplayName = "EasySettingPipes"
Icon = ""
