[project]
name = "Comfyui-EasySettingPipes"
description = "A Sampler and another settings pipe, and a rgthree style lora loader&stacker for comfyui"
version = "0.2"
license = {text = "MIT License"} 

[project.urls]
Repository = "https://github.com/hayde0096/Comfyui-EasySettingpipes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayde0096"
DisplayName = "EasySettingPipes"
Icon = ""
